# otter

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  index.html  otter.pyi  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: preprocess.md  prompt.md  repair.md
examples/: basic_usage.rs
src/: confidence.rs  lib.rs  main.rs  preprocess.rs  python.rs  repair_engine.rs  wasm.rs
tests/: corpus.json  test_bindings.py  test_confidence.rs  test_enforce.rs  test_prompt_generator.rs  test_repair_engine.rs  test_repair_rules.rs
