[package]
name = "otter"
version = "0.9.0"
edition = "2024"

[dependencies]
regex = "1.12.3"
serde_json = "1.0.149"
strum_macros = "0.28.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jsonschema = "0.45.0"
pyo3 = { version = "0.28.3", features = ["extension-module"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
jsonschema = { version = "0.45.0", default-features = false }
wasm-bindgen = "0.2.118"

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }

[lib]
name = "otter"
crate-type = ["rlib", "cdylib"]
